--- a/app/src/main/res/layout/activity_enkrip.xml
+++ b/app/src/main/res/layout/activity_enkrip.xml
@@ -43,16 +43,42 @@
             android:id="@+id/etEnkrip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Kode Enkripsi"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:hint="Masukan r"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:layout_gravity="center"
-            android:imeOptions="actionDone"
+            android:gravity="center"
+            android:padding="10dp"
+            android:fontFamily="sans-serif-condensed"
+            android:inputType="number"/>
+        <EditText
+            android:id="@+id/etKode2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Masukan X0"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_gravity="center"
             android:gravity="center"
             android:padding="10dp"
             android:fontFamily="sans-serif-condensed"
             android:inputType="number"
             android:layout_marginBottom="10dp"/>
+        <EditText
+            android:id="@+id/etKode3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Masukan K"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="10dp"
+            android:fontFamily="sans-serif-condensed"
+            android:inputType="number"/>
         <Button
             android:layout_gravity="center"
             android:layout_width="wrap_content"
