--- a/app/src/main/res/layout/activity_chatroom.xml
+++ b/app/src/main/res/layout/activity_chatroom.xml
@@ -20,6 +20,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <ScrollView
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/scrollView"
@@ -36,6 +37,11 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:id="@+id/textView" />
     </ScrollView>
+    <ListView
+        android:id="@+id/listViewChat"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"/>
 
     <LinearLayout
         android:layout_width="match_parent"
