--- a/app/src/main/res/layout/activity_chatroom.xml
+++ b/app/src/main/res/layout/activity_chatroom.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@drawable/bg_chat"
+    android:background="@color/colorBackground"
     android:weightSum="1">
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
@@ -41,6 +41,7 @@
         android:id="@+id/listViewChat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:listSelector="@android:color/transparent"
         android:layout_weight="1"/>
 
     <LinearLayout
