--- a/app/src/main/res/layout/activity_enkrip.xml
+++ b/app/src/main/res/layout/activity_enkrip.xml
@@ -51,20 +51,35 @@
             android:padding="10dp"
             android:fontFamily="sans-serif-condensed"
             android:inputType="number"/>
-        <EditText
-            android:id="@+id/etKode2"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Masukan X0"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:padding="10dp"
-            android:fontFamily="sans-serif-condensed"
-            android:inputType="number"
-            android:layout_marginBottom="10dp"/>
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_marginLeft="35dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textColor="@color/colorText"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:fontFamily="sans-serif-condensed"
+                android:text="0."/>
+            <EditText
+                android:id="@+id/etKode2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Masukan X0"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="30dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:padding="10dp"
+                android:fontFamily="sans-serif-condensed"
+                android:inputType="number"
+                android:layout_marginBottom="10dp"/>
+        </LinearLayout>
         <EditText
             android:id="@+id/etKode3"
             android:layout_width="match_parent"
